test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string_cast.sol
contract at layout at uint40(bytes5(hex"0011223344")) { }
// ----
// UnimplementedFeatureError 1834: (0-57): Code generation is not supported for contracts with specified storage layout base.
